@@ -61,9 +61,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
 
       Assertions.assertThatNoException()
           .isThrownBy(
-              () ->
-                  stimmabgabevermerkeService.getStimmabgabevermerke(
-                      new BezirkIDUndWaehlerverzeichnisNummer(wahlbezirkID, 0L)));
+              () -> stimmabgabevermerkeService.getStimmabgabevermerke(wahlbezirkID, "wahlID", 0L));
     }
 
     @ParameterizedTest(name = "{index} = {1} missing")
@@ -78,9 +76,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
           .thenReturn(true);
 
       Assertions.assertThatThrownBy(
-              () ->
-                  stimmabgabevermerkeService.getStimmabgabevermerke(
-                      new BezirkIDUndWaehlerverzeichnisNummer(wahlbezirkID, 0L)))
+              () -> stimmabgabevermerkeService.getStimmabgabevermerke(wahlbezirkID, "wahlID", 0L))
           .isInstanceOf(AccessDeniedException.class);
     }
 
@@ -95,9 +91,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
           .thenReturn(false);
 
       Assertions.assertThatThrownBy(
-              () ->
-                  stimmabgabevermerkeService.getStimmabgabevermerke(
-                      new BezirkIDUndWaehlerverzeichnisNummer(wahlbezirkID, 0L)))
+              () -> stimmabgabevermerkeService.getStimmabgabevermerke(wahlbezirkID, "wahlID", 0L))
           .isInstanceOf(AccessDeniedException.class);
     }
 
@@ -122,7 +116,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
 
       Assertions.assertThatNoException()
           .isThrownBy(
-              () -> stimmabgabevermerkeService.postStimmabgabevermerke(id, createSavableModel(id)));
+              () -> stimmabgabevermerkeService.postStimmabgabevermerke(createSavableModel(id)));
     }
 
     @Test
@@ -137,7 +131,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
           .thenReturn(false);
 
       Assertions.assertThatThrownBy(
-              () -> stimmabgabevermerkeService.postStimmabgabevermerke(id, createSavableModel(id)))
+              () -> stimmabgabevermerkeService.postStimmabgabevermerke(createSavableModel(id)))
           .isInstanceOf(AccessDeniedException.class);
     }
 
@@ -157,7 +151,7 @@ public class StimmabgabevermerkeServiceSecurityTest {
           .thenReturn(true);
 
       Assertions.assertThatThrownBy(
-              () -> stimmabgabevermerkeService.postStimmabgabevermerke(id, createSavableModel(id)))
+              () -> stimmabgabevermerkeService.postStimmabgabevermerke(createSavableModel(id)))
           .isInstanceOf(AccessDeniedException.class);
     }
 
@@ -177,13 +171,13 @@ public class StimmabgabevermerkeServiceSecurityTest {
           .thenReturn(true);
 
       Assertions.assertThatThrownBy(
-              () -> stimmabgabevermerkeService.postStimmabgabevermerke(id, createSavableModel(id)))
+              () -> stimmabgabevermerkeService.postStimmabgabevermerke(createSavableModel(id)))
           .isInstanceOf(TechnischeWlsException.class);
     }
 
     private static Stream<Arguments> getMissingAuthoritiesVariationsThatThrowAccessDenied() {
       return SecurityUtils.buildArgumentsForMissingAuthoritiesVariations(
-          ArrayUtils.removeElement(
+          ArrayUtils.removeElements(
               Authorities.ALL_AUTHORITIES_SET_STIMMABGABEVERMERKE,
               Authorities.REPOSITORY_WRITE_STIMMABGABEVERMERKE));
     }
@@ -202,15 +196,11 @@ public class StimmabgabevermerkeServiceSecurityTest {
           Set.of(new EingenommenerWahlscheinModel(0L, StimmzettelartModel.BEIDE));
 
       return new StimmabgabevermerkeModel(
-          id,
-          0L,
-          Set.of(
-              new WahldatenModel(
-                  id.getWahlbezirkID(),
-                  "wahlID",
-                  id.getWaehlerverzeichnisNummer(),
-                  Collections.emptySet(),
-                  eingenommeneWahlscheine)));
+          id.getWahlbezirkID(),
+          "wahlID",
+          id.getWaehlerverzeichnisNummer(),
+          Collections.emptySet(),
+          eingenommeneWahlscheine);
     }
   }
 }
